[build-system]
requires = ["setuptools >= 75.3.2"]
build-backend = "setuptools.build_meta"

[project]
name = "plot_format"
authors = [
  { name="Okko Järvinen" },
  { name="Santeri Porrasmaa" },
]
description = "Global plot formatting options for producing IEEE journal compatible figures easily"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = { file = "LICEN[CS]E*" }
version = "0.1.0"

[project.urls]
Homepage = "https://github.com/TheSDK-blocks/plot_format"
Issues = "https://github.com/TheSDK-blocks/plot_format/issues"
